Layout Update Main Page

--- a/frontend/src/css/_global.scss
+++ b/frontend/src/css/_global.scss
@@ -5,7 +5,7 @@ $secondary : rgb(212, 212, 212);
 $third : #6e199c;
 $fourth : #5b2ab5;
 $fifth : #00a1ff;
-
+$menuTopHeight: 5em;
 
 * {
 	font-family: 'Righteous', cursive;
