--- a/frontend/src/css/_global.scss
+++ b/frontend/src/css/_global.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 $primary: black;
+$primary_medium: rgb(70, 70, 70);
 $secondary : rgb(212, 212, 212);
 $third : #6e199c;
 $fourth : #5b2ab5;
